2011-02-17       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  many bug fixes to nodes.
	* gm2/www/tools/texi2tr:  added html, png subdirs.
	* gm2/www/tools/texi2tr/src:  many bug fixes applied.

2011-02-15       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  incorporated the contents of the
	  web page gm2/www/index.ms into gm2.texi.

2011-02-10       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  modified gm2.html rule.
	* gm2/gm2.texi:  changed Function Index to Indices.
	* gm2/examples/texi2tr/src/outputdev.py:  added
	  templatePath.
	* gm2/examples/texi2tr/src/texi2tr.py:  added
	  rootName, templatePath, baseName options.
	* gm2/www/Makefile.in:  new building instructions
	  for the web site now that texi2tr is useable.
	* gm2/www/index.ms:  minor changes.
	
2011-02-09       Gaius Mulley <gaius@gnu.org>

	* texi2tr is now able to translate the gm2.texi
	  into html.  First usable version.
	* gm2/examples/texi2tr/src/config.py:  many changes.
	* gm2/examples/texi2tr/src/outputdev.py:  many changes.
	* gm2/examples/texi2tr/src/navigate.py:  many changes.
	* gm2/examples/texi2tr/src/texi2tr.py:  many changes.

2011-02-04       Gaius Mulley <gaius@gnu.org>

	* gm2/examples/texi2tr:  new directory.
	* gm2/examples/texi2tr/src:  new directory.
	* gm2/examples/texi2tr/src/config.py:  new file.
	* gm2/examples/texi2tr/src/outputdev.py:  new file.
	* gm2/examples/texi2tr/src/navigate.py:  new file.
	* gm2/examples/texi2tr/src/texi2tr.py:  new file.

2011-01-30       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2.texi:  fixed some typos and corrected the
	  python version number.  Also foxed some texinfo variable
	  references.
	* gm2/gm2/gm2spec.c:  tided up code.  Also modified the
	  driver to add easily maintainable ordered lists of
	  object paths and library paths.
	* gm2/el/g-mode.el:  updated the dates.
	* gm2/gm2/Make-lang.in:  use the new tool texi2tr to
	  generate the html documentation which is currently
	  under development.
